WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57873
Invalidate callbacks if the WebPageProxy is no longer valid
https://bugs.webkit.org/show_bug.cgi?id=57873
Summary
Invalidate callbacks if the WebPageProxy is no longer valid
Anders Carlsson
Reported
2011-04-05 12:41:40 PDT
Invalidate callbacks if the WebPageProxy is no longer valid
Attachments
Patch
(8.06 KB, patch)
2011-04-05 12:44 PDT
,
Anders Carlsson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-05 12:44:14 PDT
Created
attachment 88295
[details]
Patch
Anders Carlsson
Comment 2
2011-04-05 13:02:46 PDT
Committed
r82970
: <
http://trac.webkit.org/changeset/82970
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug